tests/frontend/fail/array/mismatched_array_type.act
constructor of B
interface constructor()

creates

  uint[3] u := [true, false]
